nouveaux outils de calcul

--- a/constant.html
+++ b/constant.html
@@ -202,7 +202,7 @@
                 <td class="tg-gvcd"><input onchange="calculate()" type="number" class="input-constant disabled red bold" id="F13" disabled><label for="F13"></label></td>
             </tr>
             <tr>
-                <td class="tg-w214"><strong>Valeur pondérée (%)</strong></td>
+                <td class="tg-w214"><strong>Valeur pondérée (%)</strong></td> <!-- Valeur pondérée : Si total = 50/100 alors valeur pondérée = 50% -->
                 <td class="tg-gvcd"><input onchange="calculate()" type="number" class="input-constant disabled red bold" id="D14" disabled><label for="D14"></label></td>
                 <td class="tg-gvcd"><input onchange="calculate()" type="number" class="input-constant disabled red bold" id="M14" disabled><label for="M14"></label></td>
                 <td class="tg-gvcd"><input onchange="calculate()" type="number" class="input-constant disabled red bold" id="F14" disabled><label for="F14"></label></td>
